--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
           <a class="dropdown-item" href="#">Web Developer</a>
         </div>
       </li>
+      
+            <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
