--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Portfolio
@@ -37,6 +34,10 @@
 
           <a class="dropdown-item" href="#">Web Developer</a>
         </div>
+      </li>
+      
+                  <li class="nav-item">
+        <a class="nav-link" href="#">Services</a>
       </li>
       
             <li class="nav-item">
