--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
 </nav>
     
    </header>
+   
+   <div class="container">
+       <img src="image/mypic.jpg" alt="My Picture" />
+   </div>
 </body>
 </html>
