--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <header>
    
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Dharmesh Vishrolia</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,9 @@
    </header>
    
    <div class="container">
-       <img src="image/mypic.jpg" alt="My Picture" />
+      <div class="text-center">
+       <img src="image/mypic.jpg" alt="My Picture" width="300"/>
+       </div>
    </div>
 </body>
 </html>
