--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="row text-center">
           
           <!-- Graphic Design Card -->
-           <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+           <div class="col-4 card" style="width: 18rem;">
+          <img class="card-img-top" src="image/gd.jpg" alt="Card image cap">
           <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -78,8 +78,8 @@
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
             <!-- Web Designing Card -->
-           <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+           <div class="col-4 card" style="width: 18rem;">
+          <img class="card-img-top" src="image/wd.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -89,8 +89,8 @@
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
             <!-- Web Development Card -->
-           <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+           <div class="col-4 card" style="width: 18rem;">
+          <img class="card-img-top" src="image/wdd.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
