--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
            <div class="col-3 card" style="width: 18rem;">
           <img class="card-img-top" src="image/gd.jpg" alt="Card image cap">
           <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
@@ -91,7 +91,6 @@
            <div class="col-3 card" style="width: 18rem;">
           <img class="card-img-top" src="image/wd.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
@@ -102,7 +101,7 @@
            <div class="col-3 card" style="width: 18rem;">
           <img class="card-img-top" src="image/wdd.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+       <!--     <h5 class="card-title">Card title</h5> -->
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
