--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
            <div class="col-3 card" style="width: 18rem;">
                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
+              <h5 class="card-title">EXAMPLES</h5>
                 <div class="carousel-item active">
+                   
                     <img src="image/graphicDesign/1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
