--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="about.html">About</a>
       </li>
       
     </ul>
