--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           Portfolio
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Graphics Design</a>
+          <a class="dropdown-item" href="graphicDesign.html">Graphics Design</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Web Design</a>
-          <a class="dropdown-item" href="#">Web Developer</a>
+          <a class="dropdown-item" href="webDesign.html">Web Design</a>
+          <a class="dropdown-item" href="webDeveloper.html">Web Developer</a>
         </div>
       </li>
       
