--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>DHARMESH VISHROLIA</title>
+    <title>SERVICES</title>
     
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -30,10 +30,10 @@
           Portfolio
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Graphics Design</a>
+          <a class="dropdown-item" href="graphicDesign.html">Graphics Design</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Web Design</a>
-          <a class="dropdown-item" href="#">Web Developer</a>
+          <a class="dropdown-item" href="webDesign.html">Web Design</a>
+          <a class="dropdown-item" href="webDeveloper.html">Web Developer</a>
         </div>
       </li>
       
