--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
      <!-- First row stars here -->
      <div class="row">
      
-             <!-- Corosoul -->
+            <img src="image/graphicDesign/banner.jpg" width="60%" alt="Banner" />
      <div class="col">
 
      </div>
