--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    
    <div class="container">
      <!-- First row stars here -->
-     <div class="row">
+     <div class="row text-center">
      
             <img src="image/graphicDesign/banner.jpg" width="55%" alt="Banner" />
      <div class="col">
