--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="card-body">
         
         <p class="card-text">I can design creative LOGO,  Animation and other graphic materials</p>
-        <a href="#" class="btn btn-primary">More EXAMPLES</a>
+        <a href="#" class="btn btn-primary">Enhance</a>
           </div>
             </div>
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
@@ -86,7 +86,7 @@
           <img class="card-img-top" src="image/wd.jpg" alt="Web Design"  onmouseover="this.src='image/wddark.jpg'" onmouseout="this.src='image/wd.jpg'">
           <div class="card-body">
             <p class="card-text">Web Design with creative touch and experience with modern technology.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Design</a>
           </div>
             </div>
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
@@ -97,7 +97,7 @@
           <div class="card-body">
        <!--     <h5 class="card-title">Card title</h5> -->
             <p class="card-text">Bespoke Web Application develop and deploy successfully.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Develop</a>
           </div>
             </div>
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
