--- a/services.html
+++ b/services.html
@@ -55,6 +55,12 @@
    <div class="container">
      <!-- First row stars here -->
      <div class="row">
+     	<div class="col">
+     		<img src="image/webservicesbanner.jpg" width="100%" alt="Web Services" />
+     	</div>
+     </div>
+     
+     <div class="row">
 		<div class="col">
 			<h1>Web Design Services</h1>
 			<hr>
@@ -71,12 +77,12 @@
    				<h1>Web Development</h1>
 			<hr>
 			<ul class="list-group list-group-flush">
-			<li class="list-group-item">Branding</li>
-			<li class="list-group-item">UX Design</li>
-			<li class="list-group-item">UI Design</li>
-			<li class="list-group-item">Wire Frame</li>
-			<li class="list-group-item">Proto Type</li>
-			<li class="list-group-item">Responsive Website</li>
+			<li class="list-group-item">Front End Development</li>
+			<li class="list-group-item">Word Press Content Management System</li>
+			<li class="list-group-item">Web Application Development</li>
+			<li class="list-group-item">Intranet Application</li>
+			<li class="list-group-item">Mobile Apps</li>
+			<li class="list-group-item">Website Maintenance and Support</li>
 						</ul>
    </div>
     </div>            
