--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="row text-center">
           
           <!-- Graphic Design Card -->
-           <div class="col card shadow-sm" style="width: 18rem;">
+           <div class="col card shadow" style="width: 18rem;">
           <img class="card-img-top" src="image/gd.jpg" alt="Graphic Design" onmouseover="this.src='image/gddark.jpg'" onmouseout="this.src='image/gd.jpg'">
           <div class="card-body">
         
@@ -83,7 +83,7 @@
 
             <!-- Web Designing Card -->
            <div class="col card" style="width: 18rem;">
-          <img class="card-img-top" src="image/wd.jpg" alt="Web Design"  onmouseover="this.src='image/wddark.jpg'" onmouseout="this.src='image/wd.jpg'">
+          <img class="card-img-top" src="image/wd.jpg" alt="Web Design" onmouseover="this.src='image/wddark.jpg'" onmouseout="this.src='image/wd.jpg'">
           <div class="card-body">
             <p class="card-text">Web Design with creative touch and experience with modern technology.</p>
             <a href="#" class="btn btn-primary">Design</a>
@@ -92,7 +92,7 @@
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
             <!-- Web Development Card -->
-           <div class="col card" style="width: 18rem;">
+           <div class="col card shadow" style="width: 18rem;">
           <img class="card-img-top" src="image/wdd.jpg" alt="Card image cap"  onmouseover="this.src='image/wdddark.jpg'" onmouseout="this.src='image/wdd.jpg'">
           <div class="card-body">
        <!--     <h5 class="card-title">Card title</h5> -->
