--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
      
      <div class="row">
 		<div class="col">
-			<h1>Web Design Services</h1>
+			<h1>Web Design</h1>
 			<hr>
 			<ul class="list-group list-group-flush">
 			<li class="list-group-item">Branding</li>
