--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <!-- Web Designing Card -->
             <div class="col">
-           <div class="card" style="width: 18rem;">
+           <div class="card shadow" style="width: 18rem;">
           <img class="card-img-top" src="image/wd.jpg" alt="Web Design" onmouseover="this.src='image/wddark.jpg'" onmouseout="this.src='image/wd.jpg'">
           <div class="card-body">
             <p class="card-text">Web Design with creative touch and experience with modern technology.</p>
@@ -97,17 +97,17 @@
 
             <!-- Web Development Card -->
             <div class="col">
-           <div class="col card shadow" style="width: 18rem;">
+           <div class="card shadow" style="width: 18rem;">
           <img class="card-img-top" src="image/wdd.jpg" alt="Card image cap"  onmouseover="this.src='image/wdddark.jpg'" onmouseout="this.src='image/wdd.jpg'">
           <div class="card-body">
        <!--     <h5 class="card-title">Card title</h5> -->
-            <p class="card-text">Bespoke Web Application develop and deploy successfully.</p>
+            <p class="card-text">Bespoke Web Application and Mobile App develop and deploy successfully.</p>
             <a href="#" class="btn btn-primary">Develop</a>
           </div>
             </div>
             </div>
             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-            <div class="col">
+           <!-- <div class="col-3">
            <div class="card" style="width: 18rem;">
                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -129,7 +129,7 @@
               </div>
             </div>
             </div>
-            </div>
+            </div> -->
              
 
              </div>
