--- a/about.html
+++ b/about.html
@@ -55,8 +55,13 @@
    <div class="container">
      <!-- First row stars here -->
      <div class="row">
+     <div class="col">
 	<h1>About Me</h1>
    <hr>
+          <img src="image/mypic.jpg" alt="My Picture" width="300"/>
+          <hr>
+          <p>MSC Distributed Compting System (University of Greenwich)</p>
+          </div>
     </div>            
     <!-- Second Row Starts Here -->
     
