--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
    <hr>
           <img src="image/mypic.jpg" alt="My Picture" width="300"/>
           <hr>
-          <p>MSC Distributed Compting System (University of Greenwich)</p>
+          <p>MSC Distributed Computing System (University of Greenwich)</p>
           </div>
     </div>            
     <!-- Second Row Starts Here -->
