--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
          <div class="col">
          	<h1>Contact Me</h1>
          	<!-- Form Starts Here -->
-         	<form>
+         	<form action="" method="post">
 
 		  <div class="form-group row">
 			<label for="inputName" class="col-sm-2 col-form-label">Name</label>
