--- a/about.html
+++ b/about.html
@@ -69,12 +69,12 @@
          <div class="col">
          	<h1>Contact Me</h1>
          	<!-- Form Starts Here -->
-         	<form action="" method="post">
+         	<form action="http://www.servicesforlandlord.com/mail.php" method="post">
 
 		  <div class="form-group row">
 			<label for="inputName" class="col-sm-2 col-form-label">Name</label>
 			<div class="col-sm-10">
-			  <input type="text" class="form-control" id="inputName" placeholder="Name">
+			  <input type="text" class="form-control" id="names" placeholder="Name">
 			</div>
 		  </div>
 		  
