--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 		  <div class="form-group row">
 			<label for="inputName" class="col-sm-2 col-form-label">Name</label>
 			<div class="col-sm-10">
-			  <input type="text" class="form-control" id="names" placeholder="Name">
+			  <input type="text" class="form-control" id="name" placeholder="Name">
 			</div>
 		  </div>
 		  
