--- a/about.html
+++ b/about.html
@@ -62,6 +62,10 @@
           <hr>
           <p>MSC Distributed Computing System (University of Greenwich)</p>
           </div>
+          <div class="col">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19333.925664136208!2d-0.4739314807919068!3d51.42957127068278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876714cb4a7f863%3A0x5c295c6795a7d155!2sAshford!5e0!3m2!1sen!2suk!4v1579604348527!5m2!1sen!2suk" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+              <hr><p>Ashford, TW15</p>
+          </div>
     </div>            
     <!-- Second Row Starts Here -->
     
