--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ add_chatinline(); </script>
    </div>
    
    <div class="footer">
-   	<P>Copy Write 2020 - Dharmesh Vishrolia</P>
+   	<P>Copy Right 2020 - Dharmesh Vishrolia</P>
    </div>
    
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
