--- a/UISite/index.html
+++ b/UISite/index.html
@@ -107,8 +107,8 @@
 				<path fill="transparent" stroke="rgba(0,50,138,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_8" d="M 0 1 L 426 0">
 				</path>
 			</svg>
-			<img id="facebook_icon" src="facebook_icon.png" srcset="facebook_icon.png 1x, facebook_icon@2x.png 2x">
-			<img id="ID174857" src="ID174857.png" srcset="ID174857.png 1x, ID174857@2x.png 2x">
+			<img id="facebook_icon" src="facebook-icon.png" srcset="facebook-icon.png 1x, facebook-icon@2x.png 2x">
+			<img id="ID174857" src="174857.png" srcset="174857.png 1x, 174857@2x.png 2x">
 			<svg class="Line_9" viewBox="0 0 426 1">
 				<path fill="transparent" stroke="rgba(36,73,148,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_9" d="M 0 1 L 426 0">
 				</path>
